# Imagine_MapReduce

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  init.py  proto_generate.sh
Imagine_MapReduce/: Callbacks.h  InputSplit.h  KVBuffer.cpp  KVBuffer.h  LineRecordReader.h  MapReduceMaster.cpp  MapReduceMaster.h  MapReduceUtil.cpp  MapReduceUtil.h  MapRunner.h  Mapper.h  OutputFormat.h  Partitioner.h  RecordReader.h  Reducer.cpp  Reducer.h  StringPartitioner.h  TextOutputFormat.h
config/: profile.yaml
docs/: Introduction
include/: Callbacks.h  InputSplit.h  KVBuffer.h  LineRecordReader.h  MapReduceMaster.h  MapReduceUtil.h  MapRunner.h  Mapper.h  OutputFormat.h  Partitioner.h  RecordReader.h  Reducer.h  StringPartitioner.h
include/Imagine_MapReduce/: HeartBeatMessage.pb.h  HeartBeatService.h  Imagine_MapReduce.h  InputSplit.h  InternalType.pb.h  KVBuffer.h  LineRecordReader.h  MapReduceMaster.h  MapReduceUtil.h  MapRunner.h  MapTaskHandler.h  MapTaskMessage.pb.h  MapTaskService.h  Mapper.h  OutputFormat.h  Partitioner.h  RecordReader.h  ReduceTaskMessage.pb.h  ReduceTaskService.h  Reducer.h  RetrieveSplitFileMessage.pb.h  RetrieveSplitFileService.h  StartReduceMessage.pb.h  StartReduceService.h  StringPartitioner.h  TaskCompleteMessage.pb.h  TaskCompleteService.h  TextOutputFormat.h  ThreadPool.h  common_definition.h  common_macro.h  common_typename.h  log_macro.h
proto/: HeartBeatMessage.proto  InternalType.proto  MapTaskMessage.proto  ReduceTaskMessage.proto  RetrieveSplitFileMessage.proto  StartReduceMessage.proto  TaskCompleteMessage.proto
src/: HeartBeatMessage.pb.cc  HeartBeatService.cpp  InputSplit.cpp  InternalType.pb.cc  KVBuffer.cpp  LineRecordReader.cpp  MapReduceMaster.cpp  MapReduceUtil.cpp  MapTaskMessage.pb.cc  ReduceTaskMessage.pb.cc  RetrieveSplitFileMessage.pb.cc  RetrieveSplitFileService.cpp  StartReduceMessage.pb.cc  StringPartitioner.cpp  TaskCompleteMessage.pb.cc  TaskCompleteService.cpp  TextOutputFormat.cpp  temp.cpp
test/: shuffle.txt
